--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password =
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto =  create
+spring.jpa.hibernate.ddl-auto =  update
 
 #to see the SQL statements generated
 logging.level.org.hibernate.SQL=DEBUG
