--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,13 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
-			<version>2.3.0.RELEASE</version><!--$NO-MVN-MAN-VER$-->
+			<version>2.3.0.RELEASE</version><!--$NO-MVN-MAN-VER$ -->
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
+		<dependency>
+			<groupId>net.coobird</groupId>
+			<artifactId>thumbnailator</artifactId>
+			<version>0.4.12</version>
 		</dependency>
 
 		<dependency>
