--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #database
-spring.datasource.url = jdbc:mysql://localhost:3306/Mydatabase?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://localhost:3306/database?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&createDatabaseIfNotExist=true
 spring.datasource.username = root
 spring.datasource.password = 
 ## Hibernate Properties
